--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 		<input id = "linecolor_inp" type = "text" size ="5" value = "#000000"/>
 		<input id = "linecolor_btn" type = "button" value = "Set line color"/>
 		<input id = "linecolor_purple" type = "button" value = "Purple"  style="background-color: #c0f; color: #4f0;"/>
+		<input id = "linecolor_green" type = "button" value = "Green"  style="background-color: #50be6f; color: #F05;"/>
 		<input id = "linecolor_blue" type = "button" value = "Blue"  style="background-color: #00f; color: #ff0;"/>
 		<input id = "linecolor_black" type = "button" value = "Black" style="background-color: #000; color: #fff;"/>
 		<input id = "grid_btn" type = "button" value = "grid"/>
 		<input id = "nogrid_btn" type = "button" value = "nogrid"/>
 		<input id = "save_canvas_btn" type = "button" value = "save canvas"/>
+		<input id = "undo_btn" type = "button" value = "undo"/>
 	</div>
 	
 	<div id = "main_div" style = "width:800px; height:800px; margin-left:20px; margin-top:20px; border:1px solid red; float:left;">
