--- a/index2.html
+++ b/index2.html
@@ -8,13 +8,10 @@
 	<script type="text/javascript" src="j/code2.js"></script>
 </head>
 <body>
-<div id = "main_div" style = "width:800px; height:800px; margin-left:20px; margin-top:20px; border:1px solid red; float:left;">
-		<canvas width = "800" height = "800" id = "main_canvas" style="position:absolute;"></canvas>
-		<canvas width = "800" height = "800" id = "second_canvas" style="position:absolute;"></canvas>
-	</div>
+<div id = "main_div" style = "width:800px; height:800px; margin-left:20px; margin-top:20px; border:1px solid red; float:left;"/>
 	<script type = "text/javascript">
 	onload = function(){
-		app();
+		app("main_div");
 	}
 	</script>
 </body>
